# freezer-display

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md  code.py  freezermonitor.py  main.py
IT8951/: spi.py
IT8951-freezer-display/src/IT8951/: display.py
assets/: README.md  convert-assets-to-bmp.sh  generate_bitmaps.bat
enclosure/: 3M_bumpon_SJ5312.FCStd  FPC_to_FFC_board.FCStd  IT8951_driver_board.FCStd  PCB-assembly.FCStd  PCB-freezer-display.FCStd  README.md  UnexpectedMaker_ProS3.FCStd  freezer-display-assembly.FCStd  waveshare_10.3_1872x1404_EPD.FCStd
enclosure/.step/: backing-plate.step  dock.step  frame.step  ineternal-frame.step
esp/: CMakeLists.txt  README.md  partitions.csv
esp/e-freezer/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp/e-freezer/fat_files/: config.txt
esp/e-freezer/main/: CMakeLists.txt  background_logic.h  build_error_screen.h  config.h  config_and_usb.h  device.cpp  device.h  freezer_UI.h  freezer_api.cpp  freezer_api.h  idf_component.yml  main.c  main.cpp  splash_screen.h  utils.h  wifi_manager.h
esp/e-freezer/main/images/: README.md  error_no_api.c  splash_screen_footer.c  test_image.c
esp/fat_files/: config.txt
esp/main/: device.h  freezer_UI.h  freezer_api.cpp  main.cpp  wifi_manager.h
esp/main/images/: README.md  error_no_internet.c  error_no_wifi.c  splash_screen_logo.c
pcb/freezer-display-pcb/: README.md  fp-lib-table  freezer-display-pcb.kicad_pcb  freezer-display-pcb.kicad_pro  freezer-display-pcb.kicad_sch  sym-lib-table
pcb/freezer-display-pcb/project-footprints.pretty/: IT8951-diver-castellated.kicad_mod  ProS3_SMD.kicad_mod
utils/: copy-code-from-board.sh
